# ompl_constrained_planning_in_se3

./: CMakeLists.txt  constrained_se3_planning.cpp  constraint_intersection_on_se3.cpp  plot_se3_path.py  plot_sphere_path.py  plot_util.py  readme.md  sphere.cpp  working.cpp
include/: QuaterionUtil.h  SE3StateSpaceAligned.h
src/: SE3StateSpaceAligned.cpp
